--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div id="container2">
         <img
-          src="/imgs/pexels-pixabay-39284.jpg"
+          src="/pexels-pixabay-39284.jpg"
           alt="random image to fill the webpage"
         />
       </div>
