--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       </nav>
     </header>
     <h2 id="contactH2">
-        The info about the sd is website already on the home page of the website.
+        The info about this website is already on the home page of the website.
     </h2> 
 
     <footer>
