changed the image location for the home page of the webpage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div id="container2">
         <img
-          src="pexels-pixabay-39284.jpg"
+          src="/images/pexels-pixabay-39284.jpg"
           alt="random image to fill the webpage"
         />
       </div>
